<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CalcTheme">


    <!--FIRST LINE-->
    <LinearLayout
        android:id="@+id/ll_firstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"

            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/up" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_1" />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_2"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonUp"
            app:layout_constraintStart_toEndOf="@id/button1" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_3"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonUp"
            app:layout_constraintStart_toEndOf="@id/button2" />

        <Button
            android:id="@+id/buttonNeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/neg"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonUp"
            app:layout_constraintStart_toEndOf="@+id/button3" />


    </LinearLayout>


    <!--SECOND LINE-->
    <LinearLayout
        android:id="@+id/ll_secondLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_firstLine">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_4" />


        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_5" />


        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_6" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/c" />
    </LinearLayout>


    <!--THIRD LINE-->

    <LinearLayout
        android:id="@+id/ll_thirdLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_secondLine">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_8"></Button>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonRad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/rad" />
    </LinearLayout>


    <!--FOURTH LINE-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_thirdLine">

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/_0" />


        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/dot" />


        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/equal" />


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_grey"
            android:minHeight="56dp"
            android:minWidth="56dp"
            android:text="@string/save" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>